[package]
name = "rsgm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rsgm"
path = "src/lib.rs"


[dependencies]
clap = { version = "3.2.14", features = ["derive"] }
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
