[package]
name = "rsgm"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A small library for importing Bayesian networks into Rust."
homepage = "https://github.com/neuppl/rsgm/" # eventually: neuppl site!
repository = "https://github.com/neuppl/rsgm/"
keywords = ["bayesian", "networks", "decision-diagrams", "bayesian-networks"]
categories = ["data-structures", "encoding"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rsgm"
path = "src/lib.rs"


[dependencies]
rsdd = { git = "https://github.com/neuppl/rsdd" }
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"

[dev-dependencies]
clap = { version = "3.2.14", features = ["derive"] }

[[example]]
name = "rsbn"
path = "examples/rsbn.rs"
